[gd_scene load_steps=33 format=3 uid="uid://uxvvaxuqpe3a"]

[ext_resource type="Script" uid="uid://dagtdivksdvyf" path="res://Scripts/nutcracker_mb_1_character_body_2d.gd" id="1_l82r8"]
[ext_resource type="Texture2D" uid="uid://oxh7mpjfreyj" path="res://Assets/Sprites/New Version/nutcracker-Sheet.png" id="1_ladjm"]
[ext_resource type="PackedScene" uid="uid://cgkhpp02r34fi" path="res://Scenes/state_machine_node.tscn" id="2_lfcwl"]
[ext_resource type="Script" uid="uid://d0br3jkarro1g" path="res://Scripts/States/NutCrackerStates/NutcrackerIdle.gd" id="3_btw76"]
[ext_resource type="Script" uid="uid://d0tu2ky7uuv74" path="res://Scripts/States/NutCrackerStates/NutcrackerFollow.gd" id="4_sdnda"]
[ext_resource type="Script" uid="uid://sfsomc2o04i8" path="res://Scripts/States/NutCrackerStates/NutcrackerStab.gd" id="5_wflb2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fls11"]
atlas = ExtResource("1_ladjm")
region = Rect2(0, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bttcb"]
atlas = ExtResource("1_ladjm")
region = Rect2(48, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1s0w"]
atlas = ExtResource("1_ladjm")
region = Rect2(96, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mase0"]
atlas = ExtResource("1_ladjm")
region = Rect2(144, 64, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bttcb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fls11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bttcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1s0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mase0")
}],
"loop": true,
"name": &"chase_animation",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fls11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bttcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1s0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mase0")
}],
"loop": true,
"name": &"move_animation",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_l82r8"]
atlas = ExtResource("1_ladjm")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn257"]
atlas = ExtResource("1_ladjm")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odxb8"]
atlas = ExtResource("1_ladjm")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1lp8"]
atlas = ExtResource("1_ladjm")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiubk"]
atlas = ExtResource("1_ladjm")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c87th"]
atlas = ExtResource("1_ladjm")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sdgw"]
atlas = ExtResource("1_ladjm")
region = Rect2(336, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_47him"]
atlas = ExtResource("1_ladjm")
region = Rect2(0, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8tbu"]
atlas = ExtResource("1_ladjm")
region = Rect2(48, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fq4f"]
atlas = ExtResource("1_ladjm")
region = Rect2(96, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_it4yb"]
atlas = ExtResource("1_ladjm")
region = Rect2(0, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae837"]
atlas = ExtResource("1_ladjm")
region = Rect2(0, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eou3j"]
atlas = ExtResource("1_ladjm")
region = Rect2(48, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eeih"]
atlas = ExtResource("1_ladjm")
region = Rect2(96, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe2ga"]
atlas = ExtResource("1_ladjm")
region = Rect2(144, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n43yn"]
atlas = ExtResource("1_ladjm")
region = Rect2(192, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmekf"]
atlas = ExtResource("1_ladjm")
region = Rect2(48, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmy6"]
atlas = ExtResource("1_ladjm")
region = Rect2(0, 128, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f33ga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l82r8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn257")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odxb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1lp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiubk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c87th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sdgw")
}],
"loop": false,
"name": &"death_animation",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_47him")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8tbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fq4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it4yb")
}],
"loop": false,
"name": &"slash_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae837")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eou3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eeih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe2ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n43yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmekf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmy6")
}],
"loop": false,
"name": &"stab_animation",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ladjm"]
size = Vector2(10, 38)

[sub_resource type="CircleShape2D" id="CircleShape2D_l82r8"]
radius = 34.0147

[node name="Nutcracker_MB1_CharacterBody2D" type="CharacterBody2D" groups=["MiniBosses"]]
script = ExtResource("1_l82r8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_bttcb")
animation = &"move_animation"
autoplay = "move_animation"

[node name="Attack_AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_f33ga")
animation = &"death_animation"
frame = 6
frame_progress = 1.0

[node name="LeftFacing_CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(13, -22)
shape = SubResource("RectangleShape2D_ladjm")
debug_color = Color(0, 0.6265115, 0.5134231, 0.41960785)

[node name="RightFacing_CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(-13, -22)
shape = SubResource("RectangleShape2D_ladjm")
debug_color = Color(0.95592135, 0, 0.5432323, 0.41960785)

[node name="StateMachine_Node" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("2_lfcwl")]
initial_state = NodePath("NutcrackerIdle")

[node name="NutcrackerIdle" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_btw76")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://d0br3jkarro1g"

[node name="NutcrackerFollow" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_sdnda")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://d0tu2ky7uuv74"

[node name="NutcrackerSlash" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_wflb2")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://sfsomc2o04i8"

[node name="NutcrackerStab" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_wflb2")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://sfsomc2o04i8"

[node name="HitBox_Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox_Area2D"]
position = Vector2(0, -29)
shape = SubResource("CircleShape2D_l82r8")

[connection signal="body_entered" from="HitBox_Area2D" to="." method="_on_hit_box_area_2d_body_entered"]
[connection signal="body_exited" from="HitBox_Area2D" to="." method="_on_hit_box_area_2d_body_exited"]
